--- a/assets/css/TrangChu.css
+++ b/assets/css/TrangChu.css
@@ -93,6 +93,7 @@
 .nav {
     margin-top: 60px;
     margin-left: 5px;
+    margin-right: 15px;
     float: left;
     background: var(--bg2);
     width: 15%;
@@ -123,41 +124,14 @@
 /* Content */
 .content {
     margin-top: 60px;
-    width: 84%;
+    width: 83%;
     float: left;
 }
 
-.sche {
-    margin-left: 100px;
-    margin-top: 20px;
-    text-align: center;
-}
-
-table, tr, td, th{
-    border: 2px solid #333;
-    border-collapse: collapse;
-}
-
-table {
-    margin: 30px auto;
-}
-
-tr {
-    height: 60px;
-}
-
-th {
-    width: 110px;
-}
-
-td a {
-    text-decoration: none;
-    color: #000000;
-}
-
-td a:hover {
-    color: var(--bg1);
-    
+iframe {
+    width: 100%;
+    min-height: 800px;
+    border: none;
 }
 /* End Content */
 
